--- a/conf/apache-vhost.conf
+++ b/conf/apache-vhost.conf
@@ -1,17 +1,17 @@
 # Uploads -------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo-sample/_uploads"
-    ServerName uploads.membrillo-sample.localhost
+    DocumentRoot "C:/www/membrillo2-sample/_uploads"
+    ServerName uploads.membrillo2-sample.localhost
 </VirtualHost>
 
 # CMS -----------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo-sample/public-cms"
-    ServerName cms.membrillo-sample.localhost
+    DocumentRoot "C:/www/membrillo2-sample/public-cms"
+    ServerName cms.membrillo2-sample.localhost
 </VirtualHost>
 
 # Web -----------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo-sample/public-web"
-    ServerName  web.membrillo-sample.localhost
+    DocumentRoot "C:/www/membrillo2-sample/public-web"
+    ServerName  web.membrillo2-sample.localhost
 </VirtualHost>
