apache-vhost.conf: rutas relativas

--- a/conf/apache-vhost.conf
+++ b/conf/apache-vhost.conf
@@ -1,17 +1,18 @@
+
 # Uploads -------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo2-sample/_uploads"
+    DocumentRoot "/www/membrillo2-sample/_uploads"
     ServerName uploads.membrillo2-sample.localhost
 </VirtualHost>
 
 # CMS -----------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo2-sample/public-cms"
+    DocumentRoot "/www/membrillo2-sample/public-cms"
     ServerName cms.membrillo2-sample.localhost
 </VirtualHost>
 
 # Web -----------------------------------
 <VirtualHost *:80>
-    DocumentRoot "C:/www/membrillo2-sample/public-web"
+    DocumentRoot "/www/membrillo2-sample/public-web"
     ServerName  web.membrillo2-sample.localhost
 </VirtualHost>
