--- a/public-cms/.htaccess
+++ b/public-cms/.htaccess
@@ -4,18 +4,22 @@ RewriteEngine on
 #php_value upload_max_filesize 15M
 
 #-- Error page --------------------------
-ErrorDocument 404 /404.php
+ErrorDocument 404 /app/404.php
 
-#-- Protected files ---------------------
+#-- Archivos protegidos -----------------
 RewriteRule .*\.(inc|log)$                       - [F,NC,L]
 RewriteRule ^_uploads/.*\.php$                   - [F,NC,L]
 RewriteRule  ^_logs/.+$                          - [F,NC,L]
+#RewriteRule ^application/_css_js/cache/.*\.php$ - [F,NC,L]
+
+#-- Proteger fotos ----------------------
+#RewriteRule  ^_uploads/foto_(.+).jpg$   /getFoto.php?id=$1  [L]
 
 #-- Add "www" ---------------------------
 RewriteCond %{HTTP_HOST}  ^([^.]+).([^.]+)$
 RewriteRule ^(.*)$        http://www.%{HTTP_HOST}/$1  [R=301,L]
 
-#-- "/" at end ------------------------
+#-- "/" al final ------------------------
 RewriteRule  ^([^\.]+[^/])$    /$1/   [R,L]
 
 #-- COMPRESSION -------------------------
@@ -30,9 +34,11 @@ RewriteRule  ^([^\.]+[^/])$    /$1/   [R,L]
 #RewriteRule  ^$    /inicio/       [L]  # web
 
 #-- Secciones ---------------------------
-# admin ---
-RewriteRule  ^(.+)/$    /?secc=$1&%{QUERY_STRING}  [L]
+# CMS ---
+RewriteRule  "^(.+)/crd/([^/]+)/([^/]+)/([^/]+)/$"  /?secc=$1&CONTROL=$2&EVENT=$3&ROW_ID=$4&%{QUERY_STRING}  [L]
+RewriteRule  "^(.+)/crd/([^/]+)/([^/]+)/$"          /?secc=$1&CONTROL=$2&EVENT=$3&%{QUERY_STRING}  [L]
+RewriteRule  ^(.+)/$                         /?secc=$1&%{QUERY_STRING}  [L]
 
 # web -----
-RewriteCond $1 !^(app|[^/]+\.php|_uploads|_cache|.+\.txt|.+\.ico)
-RewriteRule ^(.+)$    /app/$1  [L]
+# RewriteCond $1 !^(app|[^/]+\.php|_uploads|_cache|.+\.txt|.+\.ico)
+# RewriteRule ^(.+)$    /app/$1  [L]
