--- a/public-cms/.htaccess
+++ b/public-cms/.htaccess
@@ -4,22 +4,18 @@ RewriteEngine on
 #php_value upload_max_filesize 15M
 
 #-- Error page --------------------------
-ErrorDocument 404 /app/404.php
+ErrorDocument 404 /404.php
 
-#-- Archivos protegidos -----------------
+#-- Protected files ---------------------
 RewriteRule .*\.(inc|log)$                       - [F,NC,L]
 RewriteRule ^_uploads/.*\.php$                   - [F,NC,L]
 RewriteRule  ^_logs/.+$                          - [F,NC,L]
-#RewriteRule ^application/_css_js/cache/.*\.php$ - [F,NC,L]
-
-#-- Proteger fotos ----------------------
-#RewriteRule  ^_uploads/foto_(.+).jpg$   /getFoto.php?id=$1  [L]
 
 #-- Add "www" ---------------------------
 RewriteCond %{HTTP_HOST}  ^([^.]+).([^.]+)$
 RewriteRule ^(.*)$        http://www.%{HTTP_HOST}/$1  [R=301,L]
 
-#-- "/" al final ------------------------
+#-- "/" to end ------------------------
 RewriteRule  ^([^\.]+[^/])$    /$1/   [R,L]
 
 #-- COMPRESSION -------------------------
