--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/_uploads
+/_uploads/*
+/public/uploads
+
 /_logs
 
 /config_host.inc
 /public-cms/_cache/
 /public-web/_cache/
+/membrillo-laradock
 
 # vendor -------------
-vendor/*
-/composer.lock
+/vendor/
